--- a/The JBB/Base.lproj/Main.storyboard
+++ b/The JBB/Base.lproj/Main.storyboard
@@ -165,7 +165,7 @@
             <objects>
                 <viewController title="Team Detail View Controller" id="OEk-U0-avN" customClass="TeamDetailViewController" customModule="The_JBB" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8id-8k-wMF">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="8TA-Lc-QQp">
@@ -345,7 +345,6 @@
                                     <segment title="|"/>
                                     <segment title="||"/>
                                     <segment title="|||"/>
-                                    <segment title="CCCAA"/>
                                 </segments>
                                 <color key="selectedSegmentTintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <connections>
@@ -447,11 +446,11 @@
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="P1V-I0-1gY">
+                            <view alpha="0.0" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="P1V-I0-1gY">
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Logo" translatesAutoresizingMaskIntoConstraints="NO" id="jnS-dD-t1q">
-                                        <rect key="frame" x="132" y="373" width="150" height="150"/>
+                                        <rect key="frame" x="132" y="378" width="150" height="150"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="150" id="C5B-HW-M50"/>
                                             <constraint firstAttribute="width" constant="150" id="i1W-VZ-828"/>
@@ -461,7 +460,7 @@
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
                                     <constraint firstItem="jnS-dD-t1q" firstAttribute="centerX" secondItem="P1V-I0-1gY" secondAttribute="centerX" id="DkG-ZE-oDz"/>
-                                    <constraint firstItem="jnS-dD-t1q" firstAttribute="centerY" secondItem="P1V-I0-1gY" secondAttribute="centerY" id="cSJ-PU-oBR"/>
+                                    <constraint firstItem="jnS-dD-t1q" firstAttribute="centerY" secondItem="P1V-I0-1gY" secondAttribute="centerY" constant="5" id="cSJ-PU-oBR"/>
                                 </constraints>
                             </view>
                         </subviews>
